--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,44 @@
                 background-color: rgb(64, 70, 202);
                 cursor: pointer;
             }
+
+            /* Tiffany CSS Code // Last Updated: 3:12 pm */
+            .container {
+                margin: 24px;
+                display: flex;
+                flex-direction: column;
+            }
+
+            .title {
+                background-color: white; 
+                border-radius: 16px;
+                height: 30px; 
+            }
+
+            body {
+            background-color: rgb(194, 196, 235);
+            }
+
+            button {
+                background-color: rgb(82, 88, 228);
+                border-color: rgb(82, 88, 228);
+                border-radius: 16px;
+                border-style: solid;
+                color: rgb(255, 255, 255);
+                font-family: sans-serif;
+                height: 32px;
+            }
+
+            button:disabled {
+                background-color: rgb(177, 177, 177);
+                border-color: rgb(177, 177, 177);
+            }
+
+            button:not([disabled]):hover {
+                background-color: rgb(64, 70, 202);
+                cursor: pointer;
+            }
+            /* End of CSS Code) */ 
         </style>
     </head>
     <body>
@@ -45,6 +83,17 @@
         <div class="container">
             <button id="createRectangle" disabled>Create Rectangle</button>
         </div>
+
+        <div style = "text-align: center"> 
+            <p> Captionify is the <b>newest</b>, most <b>revolutionary</b> captioning __ which utilizes Whisper AI and Python's audio libraries
+            to automatically generate captions. <b>But here's the kicker</b>: this add on will run sentiment analysis on your audio file to generate 
+            <b>expressive captions</b> which can be used for to spice up your videos.</p> 
+            <p>Start using this tool today! Just click the button below to generate some awesome captions!</p>
+        </div> 
+        <div class="container">
+            <button id="createRectangle" disabled>Create Rectangle</button>
+        </div>
+
 
         <script type="module" src="ui/index.js"></script>
     </body>
