--- a/src/index.html
+++ b/src/index.html
@@ -82,19 +82,29 @@
             Please note that this document does not use the spectrum web components theme for Express.
             You may use "addOnUISdk.app.ui.theme" to get the current theme and style accordingly.
         -->
-        <div class="container">
-            <button id="createRectangle" disabled>Create Rectangle</button>
-        </div>
-
-        <div style = "text-align: center"> 
-            <p> Captionify is the <b>newest</b>, most <b>revolutionary</b> captioning __ which utilizes Whisper AI and Python's audio libraries
-            to automatically generate captions. <b>But here's the kicker</b>: this add on will run sentiment analysis on your audio file to generate 
-            <b>expressive captions</b> which can be used for to spice up your videos.</p> 
-            <p>Start using this tool today! Just click the button below to generate some awesome captions!</p>
-        </div> 
-        <div class="container">
-            <button id="createRectangle" disabled>Create Rectangle</button>
-        </div>
+        <!-- Beginning of Code Tiffany -->
+        <head>
+            <meta charset="UTF-8" />
+            <meta name="description" content="Get started with Add-on development using JavaScript" />
+            <meta name="keywords" content="Adobe, Express, Add-On, JavaScript" />
+            <meta name="viewport" content="width=device-width, initial-scale=1.5" />
+            <title>Get Started</title>
+        </head>
+        <body>
+            <div style = "text-align: center" class="title"> 
+                <h2> Welcome to Captionify! </h2> 
+            </div> 
+            <div style = "text-align: center"> 
+                <p> Captionify is the <b>newest</b>, most <b>revolutionary</b> captioning __ which utilizes Whisper AI and Python's audio libraries
+                to automatically generate captions. <b>But here's the kicker</b>: this add on will run sentiment analysis on your audio file to generate 
+                <b>expressive captions</b> which can be used for to spice up your videos.</p> 
+                <p>Start using this tool today! Just click the button below to generate some awesome captions!</p>
+            </div> 
+            <div class="container">
+                <button id="createRectangle" disabled>Create Rectangle</button>
+            </div>
+        </body>
+        <!-- End of Code -->
 
 
         <script type="module" src="ui/index.js"></script>
