updated by tiff

--- a/src/index.html
+++ b/src/index.html
@@ -56,8 +56,9 @@
             }
 
             button {
-                background-color: rgb(82, 88, 228);
-                border-color: rgb(82, 88, 228);
+                background-color: rgb(228, 82, 157);
+                border-color: rgb(228, 82, 157);
+                /*rgb(82, 88, 228);*/
                 border-radius: 16px;
                 border-style: solid;
                 color: rgb(255, 255, 255);
