updated by tiff 3:59 pm

--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,14 @@
                 background-color: white; 
                 border-radius: 16px;
                 height: 30px; 
+                transition-property: width;
+                transition-duration: 2s;
+                transition-timing-function: linear;
+                transition-delay: 1s;
             }
 
             body {
-            background-color: rgb(194, 196, 235);
+                background-color: rgb(194, 196, 235);
             }
 
             button {
