updated by tiff 4:25 pm

--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,6 @@
                 background-color: white; 
                 border-radius: 16px;
                 height: 30px; 
-                transition-property: width;
-                transition-duration: 2s;
-                transition-timing-function: linear;
-                transition-delay: 1s;
             }
 
             body {
@@ -60,7 +56,7 @@
         -->
         <!-- Beginning of Code Tiffany -->
         <body>
-            <div style = "text-align: center" class="title"> 
+            <div style = "text-align: center" class = "title fade-in-text"> 
                 <h2> Welcome to Captionify! </h2> 
             </div> 
             <div style = "text-align: center"> 
