Added file upload button to index.html, and added David's python files

--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,10 @@
             <div class="container">
                 <button id="createRectangle" disabled>Create Rectangle</button>
             </div>
+            <div class="container">
+                <input type="file" id="video-upload" accept="video/*" />
+            </div>
+            <p id = "file-name"></p>
         </body>
         <!-- End of Code -->
 
