Added video file upload

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,9 @@
             <div class="container">
                 <input type="file" id="video-upload" accept="video/*" />
             </div>
+            <div style = "text-align: center"> 
             <p id = "file-name"></p>
+            </div>
         </body>
         <!-- End of Code -->
 
