--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,8 @@
+<!-- Code by Tiffany Le and Linus Wong 
+Comments by Tiffany Le 
+Date Created: 26 April 2025 
+Last Update: 8:52 pm -->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
