--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@ Last Update: 8:52 pm -->
                 margin: 24px;
                 display: flex;
                 flex-direction: column;
+                border-radius: 16px;
             }
 
             /* Title Styling */ 
