--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,9 @@
                 <form method="POST" enctype="multipart/form-data" action ="/upload"><!--sends data inside of form to /upload-->
                     <input type="file" id="video-upload" accept="video/*" />
                     <br>
+                   <!-- <button id="">-->
                     <input type="submit" value = "Upload and Transcribe">
+                <!--</button>-->
                 </form>
             </div>
             <div style = "text-align: center"> 
