tiff html update; button, 9:28 pm

--- a/src/index.html
+++ b/src/index.html
@@ -80,10 +80,11 @@ Last Update: 8:52 pm -->
             </div>
             <!-- Start of Linus HTML Code // Last Updated: 4:30 pm -->
             <div class="container">
-                <form method="POST" enctype="multipart/form-data" action ="/upload"><!--sends data inside of form to /upload-->
+                <!--sends data inside of form to /upload-->
+                <form method="POST" enctype="multipart/form-data" action ="/upload">
                     <input type="file" id="video-upload" accept="video/*" />
                     <br>
-                    <input type="submit" value = "Upload and Transcribe">
+                    <input type="submit" value = "Upload and Transcribe" class = "button">
                 </form>
             </div>
             <div style = "text-align: center"> 
