tiff undo 9:32 pm

--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@ Last Update: 8:52 pm -->
                 <form method="POST" enctype="multipart/form-data" action ="/upload">
                     <input type="file" id="video-upload" accept="video/*" />
                     <br>
-                    <input type="submit" value = "Upload and Transcribe" class = "button">
+                    <input type="submit" value = "Upload and Transcribe">
                 </form>
             </div>
             <div style = "text-align: center"> 
