--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,6 @@ Last Update: 8:52 pm -->
             /* End of CSS Code */ 
         </style>
     </head>
-    <body>
         <!-- 
             Please note that this document does not use the spectrum web components theme for Express.
             You may use "addOnUISdk.app.ui.theme" to get the current theme and style accordingly.
@@ -79,15 +78,49 @@ Last Update: 8:52 pm -->
                 <button id="createRectangle" disabled>Create Rectangle</button>
             </div>
             <!-- Start of Linus HTML Code // Last Updated: 4:30 pm -->
-            <div class="container">
-                <form method="POST" enctype="multipart/form-data" action ="/upload"><!--sends data inside of form to /upload-->
-                    <input type="file" id="video-upload" accept="video/*" />
-                    <br>
-                   <!-- <button id="">-->
-                    <input type="submit" value = "Upload and Transcribe">
-                <!--</button>-->
-                </form>
-            </div>
+            
+
+            <input type="file" id="video-upload" accept="video/*">
+            <button id="upload-btn">Upload Video</button>
+
+            <script>
+            let fileInput = document.getElementById('video-upload');
+            let uploadBtn = document.getElementById('upload-btn');
+
+            uploadBtn.addEventListener('click', function() {
+                let file = fileInput.files[0];
+
+                if (!file) {
+                    alert('Please select a file first!');
+                    return;
+                }
+
+                let formData = new FormData();
+                formData.append('video', file);
+
+                fetch('http://localhost:3000/uploads/', {
+                    method: 'POST',
+                    body: formData
+                })
+                .then(response => response.text())
+                .then(data => {
+                    console.log('Server responded:', data);
+                    // update HTML with transcription maybe
+                })
+                .catch(error => {
+                    console.error('Upload error:', error);
+                });
+            });
+            </script>
+
+            <!-- <script>
+                const form = document.querySelector('form');
+                const loadingDiv = document.getElementById('loading');
+            
+                form.addEventListener('submit', function() {
+                    loadingDiv.style.display = 'block';
+                });
+            </script> -->
             <div style = "text-align: center"> 
             <p id = "file-name"></p>
             </div>
@@ -95,5 +128,4 @@ Last Update: 8:52 pm -->
         <!-- End of HTML Code -->
 
         <script type="module" src="ui/index.js"></script>
-    </body>
 </html>
